commit #2 video link

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -108,6 +108,7 @@ header {
     a {
       display: flex;
       align-items: center;
+      text-decoration: none;
       i {
         font-size: 3rem;
         color: #fff;
