--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,6 +137,7 @@ header .video-play a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-decoration: none;
 }
 
 header .video-play a i {
