--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,6 +9,30 @@ body {
   width: 100%;
 }
 
+// accent-color
+.accent-color {
+  color: #37b721;
+}
+
+.accent-color-sec {
+  color: #f17d37;
+}
+
+// typo
+.heading {
+  font-size: 2.2rem;
+  font-weight: 400;
+  line-height: 1.4;
+  color: #777;
+  margin-bottom: 1.5rem;
+}
+.para {
+  color: #999;
+  font-size: 1rem;
+  line-height: 1.6;
+  margin-bottom: 1rem;
+}
+
 // button
 .btn {
   all: unset;
@@ -26,6 +50,56 @@ body {
   }
 }
 
+// input
+.input {
+  margin: 0.4em 0;
+  display: flex;
+  align-items: center;
+  span i {
+    padding: 0.34rem 0.25rem 0.38rem 0.6rem;
+    border: 1px solid #ccc;
+    color: #ccc;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-right: none;
+  }
+  input {
+    width: 200px;
+    padding: 0.43rem 0.6rem;
+    font-size: 1.2rem;
+    color: #999;
+    border: 1px solid #ccc;
+    border-left: none;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
+// wrapper
+.wrapper {
+  width: 85%;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+// animation
+@keyframes bounce {
+  0% {
+    bottom: 2rem;
+  }
+  50% {
+    bottom: 3rem;
+  }
+  100% {
+    bottom: 2rem;
+  }
+}
+
 // header
 header {
   width: 100%;
@@ -39,6 +113,7 @@ header {
     padding-left: 1rem;
     padding-right: 1rem;
     padding: 1rem 0;
+    border-bottom: 1px solid rgba($color: #fff, $alpha: 0.4);
     display: flex;
     align-items: center;
     .phone {
@@ -48,8 +123,9 @@ header {
         align-items: center;
         padding: 0.6rem;
         color: #fff;
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         i {
+          font-size: 0.9rem;
           margin-right: 6px;
         }
         a {
@@ -88,6 +164,7 @@ header {
     transform: translate(-50%, -50%);
     text-align: center;
     span {
+      font-size: 0.8em;
       color: #fff;
       position: absolute;
       right: 2.5rem;
@@ -128,6 +205,59 @@ header {
     }
     &:hover {
       opacity: 0.9;
+    }
+  }
+  #expand {
+    position: absolute;
+    left: 50%;
+    transform: translateY(-50%);
+    color: #fff;
+    font-size: 2rem;
+    animation: bounce 1.5s;
+    animation-iteration-count: infinite;
+  }
+}
+
+// main
+.main {
+  padding: 4rem 0;
+  .wrapper {
+    display: flex;
+    align-items: center;
+    .left {
+      flex: 3;
+      img {
+        width: 100%;
+      }
+    }
+    .right {
+      flex: 2;
+      padding-left: 1rem;
+    }
+  }
+}
+
+// location
+.location {
+  padding: 4rem 0;
+  .wrapper {
+    display: flex;
+    .left {
+      flex: 3;
+      .input {
+        margin-top: 2.5rem;
+      }
+    }
+    .right {
+      flex: 4;
+      position: relative;
+      h1 {
+        font-size: 10rem;
+        position: absolute;
+        right: 0;
+        top: -4rem;
+        color: #fbfbfb;
+      }
     }
   }
 }
