--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -404,6 +404,7 @@ header #expand {
 
 .destination .wrapper .dest img {
   width: 100%;
+  height: 100%;
 }
 
 .destination .wrapper .dest:hover {
@@ -429,5 +430,50 @@ header #expand {
 .destination .wrapper .dest .text span {
   color: #fff;
   font-size: 0.9rem;
+}
+
+.destination .wrapper .dest .overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.4)));
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+}
+
+.stat {
+  padding: 4rem 0;
+  border-bottom: 1px solid #f4f4f4;
+}
+
+.stat .wrapper > h1 {
+  margin-bottom: 1rem;
+}
+
+.stat .wrapper h1,
+.stat .wrapper p {
+  text-align: center;
+}
+
+.stat .wrapper .count {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 2.5rem 0 0;
+  max-width: 60%;
+  margin: auto;
+}
+
+.stat .wrapper .count .flex {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.stat .wrapper .count .flex h1 {
+  font-size: 2.6rem;
+  color: #f17d37;
+  margin-bottom: 0.3rem;
 }
 /*# sourceMappingURL=main.css.map */
