--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -308,6 +308,7 @@ header {
       }
       img {
         width: 100%;
+        height: 100%;
       }
       &:hover {
         opacity: 1;
@@ -328,6 +329,47 @@ header {
         span {
           color: #fff;
           font-size: 0.9rem;
+        }
+      }
+      .overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: linear-gradient(
+          180deg,
+          rgba(0, 0, 0, 0),
+          rgba(0, 0, 0, 0.4)
+        );
+      }
+    }
+  }
+}
+
+// count
+.stat {
+  padding: 4rem 0;
+  border-bottom: 1px solid #f4f4f4;
+  .wrapper {
+    > h1 {
+      margin-bottom: 1rem;
+    }
+    h1,
+    p {
+      text-align: center;
+    }
+    .count {
+      display: flex;
+      padding: 2.5rem 0 0;
+      max-width: 60%;
+      margin: auto;
+      .flex {
+        flex: 1;
+        h1 {
+          font-size: 2.6rem;
+          color: #f17d37;
+          margin-bottom: 0.3rem;
         }
       }
     }
