--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -288,6 +288,7 @@ header #expand {
   -webkit-box-flex: 3;
       -ms-flex: 3;
           flex: 3;
+  padding: 0 1rem;
 }
 
 .main .wrapper .left img {
@@ -298,7 +299,7 @@ header #expand {
   -webkit-box-flex: 2;
       -ms-flex: 2;
           flex: 2;
-  padding-left: 1rem;
+  padding: 0 1rem;
 }
 
 .location {
@@ -460,8 +461,8 @@ header #expand {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 2.5rem 0 0;
-  max-width: 60%;
+  padding: 3rem 0 1rem;
+  max-width: 70%;
   margin: auto;
 }
 
@@ -475,5 +476,87 @@ header #expand {
   font-size: 2.6rem;
   color: #f17d37;
   margin-bottom: 0.3rem;
+}
+
+.testimonial {
+  padding: 4rem;
+}
+
+.testimonial .wrapper .testimonial-single {
+  text-align: center;
+  max-width: 46rem;
+  margin: 0 auto;
+}
+
+.testimonial .wrapper .testimonial-single .head {
+  font-size: 10rem;
+  color: lightgray;
+  line-height: 1;
+  opacity: 0.4;
+}
+
+.testimonial .wrapper .testimonial-single .lead {
+  font-size: 1.4rem;
+  margin-top: -3rem;
+  margin-bottom: 1.2rem;
+  color: #777;
+}
+
+.testimonial .wrapper .testimonial-single .user {
+  padding: 1rem 0 0;
+}
+
+.testimonial .wrapper .testimonial-single .user img {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  opacity: 0.8;
+}
+
+.testimonial .wrapper .testimonial-single .user span.name {
+  display: block;
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #bbbbbb;
+}
+
+.cta {
+  padding: 3rem;
+  background-color: #37b721;
+}
+
+.cta .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.cta .wrapper span {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  color: #fff;
+  font-size: 1.4rem;
+}
+
+.cta .wrapper .cta-btn {
+  font-size: 0.8rem;
+  font-weight: 600;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 0.8rem 1.8rem;
+  border-radius: 40px;
+}
+
+.cta .wrapper .cta-btn:hover {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 /*# sourceMappingURL=main.css.map */
