--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -398,7 +398,7 @@ header {
         color: #777;
       }
       .user {
-        padding: 1rem 0 0;
+        padding: 1rem 0 2rem;
         img {
           width: 4rem;
           height: 4rem;
@@ -443,6 +443,53 @@ header {
       &:hover {
         background-color: rgba($color: #fff, $alpha: 0.1);
       }
+    }
+  }
+}
+
+// footer
+footer {
+  .wrapper {
+    padding: 4rem 0 4rem;
+    display: flex;
+    .ft-flex-item {
+      h3 {
+        margin-bottom: 2rem;
+        font-size: 1.3rem;
+        font-weight: 400;
+        color: #777;
+      }
+      ul {
+        padding: 0;
+        list-style: none;
+        li {
+          margin-bottom: 1rem;
+          a {
+            display: inline-block;
+            text-decoration: none;
+            color: rgb(168, 168, 168);
+            font-size: 1rem;
+            &:hover {
+              color: #777;
+            }
+          }
+        }
+      }
+      &:not(:last-child) {
+        flex: 2;
+      }
+      &:last-child {
+        flex: 3;
+      }
+    }
+  }
+  .copyright {
+    padding: 0 0 4rem;
+    p {
+      width: 100%;
+      text-align: right;
+      font-size: 1.2rem;
+      color: lightgray;
     }
   }
 }
