--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -87,6 +87,15 @@ body {
   padding-right: 1rem;
 }
 
+// show/hide menu
+.show {
+  display: block !important;
+}
+
+.hide {
+  display: none !important;
+}
+
 // animation
 @keyframes bounce {
   0% {
@@ -103,7 +112,7 @@ body {
 // header
 header {
   width: 100%;
-  height: calc(100vh - 3rem);
+  height: calc(100vh);
   position: relative;
   background: url(../img/hero.jpeg) no-repeat center center/cover;
   .navigation {
@@ -140,19 +149,32 @@ header {
       }
     }
     nav {
-      a {
-        display: inline-block;
-        padding: 0.6rem;
-        font-size: 0.8rem;
-        font-weight: 600;
-        text-decoration: none;
-        text-transform: uppercase;
-        color: #fff;
-        &:not(:nth-child(1)) {
-          margin-left: 1.2rem;
+      ul.nav-links {
+        list-style: none;
+        li {
+          display: inline;
+          a {
+            display: inline-block;
+            padding: 0.6rem;
+            font-size: 0.8rem;
+            font-weight: 600;
+            text-decoration: none;
+            text-transform: uppercase;
+            color: #fff;
+            &:not(:nth-child(1)) {
+              margin-left: 1.2rem;
+            }
+            &:hover {
+              opacity: 0.9;
+            }
+          }
         }
-        &:hover {
-          opacity: 0.9;
+      }
+      #bars {
+        display: none;
+        cursor: pointer;
+        i {
+          color: #fff;
         }
       }
     }
@@ -499,6 +521,46 @@ footer {
   .wrapper {
     width: 99%;
   }
+  header {
+    .hero-text {
+      h1 {
+        font-size: 5rem;
+      }
+      .btn {
+        padding: 0.8rem 1.8rem;
+      }
+    }
+    .video-play {
+      bottom: 2.8rem;
+      left: 3.5rem;
+      a {
+        i {
+          font-size: 2.8rem;
+        }
+      }
+    }
+    .navigation {
+      width: 90%;
+      display: block;
+      padding: 0.6rem 0;
+      nav {
+        ul.nav-links {
+          margin-top: 0.6rem;
+          display: none;
+          li {
+            display: block;
+            margin-bottom: 0.2rem;
+          }
+        }
+        #bars {
+          display: inline-block;
+          position: absolute;
+          right: 2.4rem;
+          top: 1.1rem;
+        }
+      }
+    }
+  }
   .main {
     padding: 3rem 0 2rem;
     .wrapper {
@@ -535,23 +597,6 @@ footer {
         margin-top: 2rem;
         ul li a {
           font-size: 0.9rem;
-        }
-      }
-    }
-  }
-  .destination {
-    padding: 2rem 0;
-    .wrapper {
-      display: block;
-      .dest {
-        margin-left: 1rem;
-        margin-right: 1rem;
-        margin-bottom: 1rem;
-        &:not(:last-child) {
-          margin-right: 1rem;
-        }
-        .overlay {
-          height: 98%;
         }
       }
     }
@@ -618,6 +663,81 @@ footer {
       p {
         text-align: center;
         font-size: 1rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .heading {
+    font-size: 1.8rem;
+  }
+  .cta {
+    .wrapper {
+      span {
+        font-size: 1.1rem;
+      }
+    }
+  }
+  .stat .wrapper .count {
+    padding-top: 2rem;
+  }
+  header {
+    .navigation {
+      nav {
+        #bars {
+          right: 1.8rem;
+          top: 1rem;
+        }
+      }
+    }
+    .hero-text {
+      h1 {
+        font-size: 4.6rem;
+        margin-bottom: 1rem;
+      }
+      span {
+        font-size: 0.6rem;
+      }
+      .btn {
+        padding: 0.8rem 1.8rem;
+      }
+    }
+    .video-play {
+      bottom: 1.8rem;
+      left: 2rem;
+      a {
+        i {
+          font-size: 2rem;
+        }
+        .wrap {
+          span {
+            font-size: 0.6rem;
+          }
+          h2 {
+            font-size: 0.9rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 766px) {
+  .destination {
+    padding: 2rem 0;
+    .wrapper {
+      display: block;
+      .dest {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        margin-bottom: 1rem;
+        &:not(:last-child) {
+          margin-right: 1rem;
+        }
+        .overlay {
+          height: 98%;
+        }
       }
     }
   }
